--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.1.4",
+    "express": "^4.17.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.2",
     "morgan": "^1.10.0",
